--- a/client/style.css
+++ b/client/style.css
@@ -6,6 +6,9 @@ html, body
 
     font-size: 18px;
 
+    margin: 0;
+    padding: 0;
+
     background-color: var(--background);
     color: var(--text-color);
 }
@@ -50,29 +53,18 @@ a
     color: var(--text-accent);
 }
 
-.test-container
+.navbar
 {
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+
+    flex: 10%;
     display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-}
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    z-index: 10;
 
-.panel
-{
-    margin: 20px;
-    width: 250px;
-    height: 350px;
-    background-color: #e4e0d5;
-    border: 4px solid #6f2320;
-    border-radius: 6px;
-    box-shadow: 10px 10px 4px #e2ded8;
-}
-
-.panel.selected
-{
-    background-color: #e4e0d5;
-    border: 4px solid #e1a44f;
-    box-shadow: 4px 4px 5px 8px rgba(241, 208, 162, 0.75);
+    background: var(--secondary);
 }
