--- a/client/style.css
+++ b/client/style.css
@@ -55,16 +55,128 @@ a
 
 .navbar
 {
+    height: 80px;
+    width: 100%;
+
+    top: 0;
     position: sticky;
     position: -webkit-sticky;
-    top: 0;
 
-    flex: 10%;
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: space-around;
-    z-index: 10;
+    z-index: 999;
 
     background: var(--secondary);
+    border-bottom: 3px solid var(--primary);
+}
+
+.navbar .content-container
+{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 2rem;
+    max-width: 1600px;
+}
+
+.navbar .logo
+{
+    font-size: 2rem;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.navbar .menu
+{
+    display: flex;
+    text-align: center;
+    gap: 1.5rem;
+    list-style: none;
+}
+
+.navbar .menu li a
+{
+    text-decoration: none;
+    font-size: 1.3rem;
+    font-weight: 500;
+    padding: 3px 20px;
+    border-radius: 20px;
+    border: 2px solid transparent;
+    transition: all 0.3s ease;
+    white-space: nowrap;
+    cursor: pointer;
+}
+
+.navbar .menu li a:hover
+{
+    color: var(--text-accent);
+    background-color: var(--primary);
+    border: 2px solid #fff;
+}
+
+.nav-toggle
+{
+    display: none;
+    background: transparent;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+}
+
+.nav-toggle .bar
+{
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    background: #fff;
+    transition: all 0.3s ease-in-out;
+}
+
+@media (max-width: 880px)
+{
+    .navbar .menu
+    {
+        display: none;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 1.7rem !important;
+        position: absolute;
+        height: 100vh;
+        width: 250px;
+        top: 0;
+        right: 0;
+        padding: 5rem 1.5rem;
+        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
+    }
+
+    .navbar .menu.active
+    {
+        display: flex;
+    }
+
+    .nav-toggle
+    {
+        display: block;
+        z-index: 999;
+    }
+
+    .nav-toggle.active .bar:nth-child(2)
+    {
+        opacity: 0;
+    }
+
+    .nav-toggle.active .bar:nth-child(1)
+    {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .nav-toggle.active .bar:nth-child(3)
+    {
+        transform: translateY(-8px) rotate(-45deg);
+    }
 }
