--- a/client/style.css
+++ b/client/style.css
@@ -10,7 +10,7 @@ html, body
     padding: 0;
 
     background-color: var(--background);
-    color: var(--text-color);
+    color: var(--text);
 }
 
 h1, h2, h3, h4, h5, h6
@@ -48,11 +48,6 @@ h6
     color: var(--text-max-faint);
 }
 
-a
-{
-    color: var(--text-accent);
-}
-
 .navbar
 {
     height: 80px;
@@ -88,6 +83,14 @@ a
     font-size: 2rem;
     font-weight: 600;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.navbar .logo img
+{
+    height: 60px;
+    margin-right: 5px;
 }
 
 .navbar .menu
@@ -104,7 +107,7 @@ a
     font-size: 1.3rem;
     font-weight: 500;
     padding: 3px 20px;
-    border-radius: 20px;
+    border-radius: 4px;
     border: 2px solid transparent;
     transition: all 0.3s ease;
     white-space: nowrap;
@@ -115,7 +118,6 @@ a
 {
     color: var(--text-accent);
     background-color: var(--primary);
-    border: 2px solid #fff;
 }
 
 .nav-toggle
@@ -133,7 +135,7 @@ a
     width: 25px;
     height: 3px;
     margin: 5px auto;
-    background: #fff;
+    background-color: var(--text);
     transition: all 0.3s ease-in-out;
 }
 
@@ -143,15 +145,20 @@ a
     {
         display: none;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
+
         gap: 1.7rem !important;
         position: absolute;
-        height: 100vh;
-        width: 250px;
-        top: 0;
+        height: calc(100vh - 83px);
+        width: min(350px, 100vw);
+
+        top: 83px;
         right: 0;
-        padding: 5rem 1.5rem;
-        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
+        margin: 0;
+        padding: 30px 0px;
+        border-left: 3px solid var(--primary);
+
+        background-color: var(--background);
     }
 
     .navbar .menu.active
