--- a/client/style.css
+++ b/client/style.css
@@ -93,6 +93,12 @@ h6
     margin-right: 5px;
 }
 
+.navbar a.logo
+{
+    text-decoration: none;
+    color: var(--text);
+}
+
 .navbar .menu
 {
     display: flex;
@@ -100,6 +106,12 @@ h6
     gap: 1.5rem;
     list-style: none;
 }
+
+.navbar .menu li
+{
+    position: relative;
+}
+
 
 .navbar .menu li a
 {
@@ -114,10 +126,42 @@ h6
     cursor: pointer;
 }
 
-.navbar .menu li a:hover
+.navbar .menu li.dropdown .dropdown-menu li a
+{
+    color: var(--text);
+    background-color: transparent;
+}
+
+.navbar .menu li:hover a,
+.navbar .menu li.focused a,
+.navbar .menu li.dropdown .dropdown-menu li:hover a
 {
     color: var(--text-accent);
     background-color: var(--primary);
+}
+
+.navbar .menu li.dropdown .dropdown-menu
+{
+    display: none;
+    padding: 0;
+    position: absolute;
+
+    top: 30px;
+    left: 0;
+    
+    flex-direction: column;
+    list-style: none;
+    gap: 1rem;
+    padding: 10px;
+
+    border: 3px solid var(--primary);
+    background-color: var(--secondary);
+}
+
+.navbar .menu li:hover.dropdown .dropdown-menu,
+.navbar .menu li.dropdown.focused .dropdown-menu
+{
+    display: flex;
 }
 
 .nav-toggle
@@ -185,5 +229,25 @@ h6
     .nav-toggle.active .bar:nth-child(3)
     {
         transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .navbar .menu li.dropdown .dropdown-menu
+    {
+        position: static;
+    }
+
+    .navbar .menu li:hover.dropdown .dropdown-menu
+    {
+        display: none;
+    }
+
+    .navbar .menu li.dropdown.focused .dropdown-menu
+    {
+        display: flex;
+        width: min(350px, 100vw);
+        border-right: 0;
+        border-left: 0;
+        padding-left: 0;
+        padding-right: 0;
     }
 }
