--- a/client/style.css
+++ b/client/style.css
@@ -130,16 +130,19 @@ h6
 .navbar li
 {
     height: 100%;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     position: relative;
+
+    cursor: pointer;
+
 }
 
 .navbar li a
 {
     text-decoration: none;
-    cursor: pointer;
     white-space: nowrap;
     transition: all 0.15s ease;
     padding: 0 1rem 0 1rem;
@@ -215,6 +218,8 @@ h6
 
     background-color: var(--paper-75);
     box-shadow: 4px 4px 4px var(--text-default-25);
+
+    cursor: auto;
 }
 
 @media (min-width: 931px)
