--- a/client/style.css
+++ b/client/style.css
@@ -120,7 +120,7 @@ hr
 input
 {
     font-family: "Courier Prime", monospace;
-    font-weight: 400;
+    font-weight: 500;
     font-style: normal;
     font-size: 18px;
     background-color: var(--paper-50);
@@ -128,6 +128,8 @@ input
     padding: 4px;
     padding-left: 10px;
     width: calc(100% - 14px);
+
+    color: var(--accent);
 }
 
 input:focus
@@ -137,6 +139,15 @@ input:focus
     outline-width: 0;
     background-color: var(--paper-75);
     border: 2px solid var(--primary);
+}
+
+.input-error
+{
+    color: var(--primary);
+    font-family: "Courier Prime", monospace;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 12px;
 }
 
 .temp-in:focus
