--- a/client/style.css
+++ b/client/style.css
@@ -76,6 +76,10 @@ form
 {
     cursor: help;
     font-size: 12px;
+    justify-content: end;
+    align-items: center;
+    align-self: center;
+    margin-left: 4px;
 }
 
 .icon.click
